--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "command line arg parser for angular, using arg-parser",
   "main": "dist/arg-parse.js",
   "scripts": {
-    "test": "./node_modules/node-ng/node-ng.js dist/test.js"
+    "test": "./node_modules/node-ng/node-ng.js dist/test.js --tt testing"
   },
   "keywords": [
     "arg",
